WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182395
Fix build error after r 227457 with VIDEO and WEB_AUDIO disabled
https://bugs.webkit.org/show_bug.cgi?id=182395
Summary
Fix build error after r 227457 with VIDEO and WEB_AUDIO disabled
Basuke Suzuki
Reported
2018-02-01 11:08:47 PST
If neither VIDEO nor WEB_AUDIO enabled, the build fails.
Attachments
patch
(1.29 KB, patch)
2018-02-01 11:13 PST
,
Basuke Suzuki
eric.carlson
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(11.57 MB, application/zip)
2018-02-01 13:50 PST
,
EWS Watchlist
no flags
Details
patch
(1.29 KB, patch)
2018-02-01 15:49 PST
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-02-01 11:13:49 PST
Created
attachment 332893
[details]
patch
EWS Watchlist
Comment 2
2018-02-01 13:49:49 PST
Comment on
attachment 332893
[details]
patch
Attachment 332893
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/6320257
New failing tests: http/tests/preload/onerror_event.html
EWS Watchlist
Comment 3
2018-02-01 13:50:00 PST
Created
attachment 332908
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Basuke Suzuki
Comment 4
2018-02-01 15:49:16 PST
Created
attachment 332918
[details]
patch
WebKit Commit Bot
Comment 5
2018-02-02 18:14:37 PST
Comment on
attachment 332918
[details]
patch Clearing flags on attachment: 332918 Committed
r228043
: <
https://trac.webkit.org/changeset/228043
>
WebKit Commit Bot
Comment 6
2018-02-02 18:14:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-02-02 18:16:16 PST
<
rdar://problem/37178588
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug