Fix build error after r 227457 with VIDEO and WEB_AUDIO disabled https://bugs.webkit.org/show_bug.cgi?id=182395

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2018-02-02
Reviewed by Eric Carlson

* platform/audio/PlatformMediaSessionManager.cpp:
(WebCore::PlatformMediaSessionManager::updateNowPlayingInfoIfNecessary):

Canonical link: https://commits.webkit.org/198258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228043 268f45cc-cd09-0410-ab3c-d52691b4dbfc